Refactor: [BE] stream에서 toList 활용